# panda-controller

./: .gitignore  .gitmodules  CMakeLists.txt  PandaControlServer.cpp  README.md  package.xml
PlateTypeManager/: PlateTypeManagerImpl.cpp  PlateTypeManagerImpl.h
RobotController/: Pose.h  RelativeMove.h  RobotControllerImpl.cpp  RobotControllerImpl.h
SiteManager/: MoveDirection.h  Pose.h  RelativeMove.h  SiteId.h  SiteManagerImpl.cpp  SiteManagerImpl.h
doc/: UserGuide.md
feat_defs/: GripController.sila.xml
feature_definitions/: RobotController.sila.xml  SiteManager.sila.xml
meta/: PlateTypeManager.proto  PlateTypeManager.sila.xml  RobotController.proto  RobotController.sila.xml  SiteManager.proto  SiteManager.sila.xml  service_description.json
pick_place/: CMakeLists.txt
pick_place/src/: pick_place.cpp
src/: Config.h.in  FileManager.cpp  FileManager.h  MicroplateTransport.cpp  MicroplateTransport.h  PandaController.cpp  PandaControllerSrv.cpp  Plate.cpp  Plate.h  RobotClient.cpp  RobotClient.h  RobotService.cpp  RobotService.h  ServiceDefs.h  Site.cpp  Site.h
srv/: FollowFrames.srv  FollowPath.srv  GetCurrentFrame.srv  GetPose.srv  MoveTo.srv  MoveToPose.srv  SetJoints.srv  SetToFrame.srv
