<?xml version="1.0"?>
<package>
  <name>panda_controller</name>
  <version>0.1.0</version>
  <description>The panda_controller ROS package.</description>
  <license>Apache-2.0</license>

  <author email="florian.bauer.dev@gmail.com">Florian Bauer</author>
  <maintainer email="florian.bauer.dev@gmail.com">Florian Bauer</maintainer>

  <url type="repository">https://github.com/FlorianBauer/panda-controller</url>
  <url type="bugtracker">https://github.com/FlorianBauer/panda-controller/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>panda_moveit_config</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <test_depend>moveit_resources</test_depend>
  <test_depend>rosunit</test_depend>
</package>

